[tool.poetry]
name = "step-one"
version = "0.1.0"
description = ""
authors = ["David Corbitt <davidlcorbitt@gmail.com>"]
readme = "README.md"
packages = [{include = "step_one"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.92"
openai = "^0.26.5"
tiktoken = "^0.2.0"
ray = "^2.2.0"
praw = "^7.6.1"
appdirs = "^1.4.4"
streamlit = "^1.19.0"
grpcio = "^1.48.2"

[tool.poetry.scripts]
step-one = "step_one.find:find_posts"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
