[tool.poetry]
name = "step-one"
version = "0.1.0"
description = ""
authors = ["David Corbitt <davidlcorbitt@gmail.com>"]
readme = "README.md"
packages = [{include = "step_one"}]

[tool.poetry.dependencies]
python = "^3.9.18"
langchain = "^0.0.92"
tiktoken = "^0.2.0"
streamlit = "^1.28.0"
praw = "^7.6.1"
appdirs = "^1.4.4"
ray = "^2.7.1"
grpcio = "^1.48.2"
datetime = "^5.1"
openpipe = "^3.3.4"

[tool.poetry.scripts]
step-one = "step_one.cli:run"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-watch = "^4.2.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = "focus"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
